@@ -1,3 +1,9 @@
+2015-07-17 Niels Grewe <niels.grewe@halbordnung.de>
+
+	* GSFIFO.m: Implement methods that allow waiting on an empty
+	FIFO for an arbitrary period of time, without raising an
+	exception.
+
 2015-07-16 Niels Grewe <niels.grewe@halbordnung.de>
 
 	* GSFIFO.m: Implement -sizeInBytesExcluding:
